--- a/NewApp/app/src/main/res/layout/activity_login.xml
+++ b/NewApp/app/src/main/res/layout/activity_login.xml
@@ -68,5 +68,14 @@
         android:text="Dont have an account? Sign Up!"
         android:textColor="#fff" />
 
+    <Button
+        android:id="@+id/button_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="13dp"
+        android:text="Button" />
+
 
 </RelativeLayout>
