+Friends e alteracoes no StartGame

--- a/NewApp/app/src/main/res/layout/activity_login.xml
+++ b/NewApp/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,7 @@
         android:layout_height="179dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="51dp"
         app:srcCompat="@drawable/serioug22"
         tools:layout_editor_absoluteX="68dp"
         tools:layout_editor_absoluteY="59dp" />
@@ -27,14 +27,13 @@
         android:layout_height="40dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="253dp"
+        android:layout_marginBottom="252dp"
         android:background="#ece3e3"
         android:drawableLeft="@drawable/ic_action_user1"
         android:ems="10"
         android:hint="Username"
         android:inputType="textPersonName"
-
-        />
+        android:textColorHint="#3b3939" />
 
     <EditText
         android:id="@+id/editPass"
@@ -42,12 +41,13 @@
         android:layout_height="40dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="199dp"
+        android:layout_marginBottom="192dp"
         android:background="#ece3e3"
         android:drawableLeft="@drawable/ic_action_pass1"
         android:ems="10"
         android:hint="Password"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:textColorHint="#403e3e" />
 
     <Button
         android:id="@+id/buttonLogin"
@@ -55,7 +55,7 @@
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="110dp"
+        android:layout_marginBottom="111dp"
         android:text="Login" />
 
     <TextView
