--- a/NewApp/app/src/main/res/layout/activity_start_game.xml
+++ b/NewApp/app/src/main/res/layout/activity_start_game.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StartGame"
     android:background="@drawable/background111"
-    >
+    tools:context=".StartGame">
 
 
     <TextView
@@ -37,7 +35,7 @@
         android:shadowDx="2"
         android:shadowDy="1"
         android:shadowRadius="5"
-        android:text="READY"
+        android:text="READY?"
         android:textColor="#000000"
         android:textSize="32sp"
         android:visibility="visible" />
@@ -60,5 +58,15 @@
         android:layout_above="@+id/textView4"
         android:layout_centerHorizontal="true"
         app:srcCompat="@drawable/vs" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+
+
+        />
 
 </RelativeLayout>
