--- a/NewApp/app/src/main/res/layout/activity_friends.xml
+++ b/NewApp/app/src/main/res/layout/activity_friends.xml
@@ -12,18 +12,18 @@
 
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/txtInvites"
         android:layout_width="122dp"
         android:layout_height="31dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/editText"
-        android:layout_marginBottom="247dp"
+        android:layout_alignStart="@+id/editUser1"
+        android:layout_marginBottom="199dp"
         android:text="Invites:"
         android:textColor="#000"
         android:textSize="20dp" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/editUser1"
         android:layout_width="303dp"
         android:layout_height="56dp"
         android:layout_alignParentTop="true"
@@ -37,11 +37,11 @@
         android:textColorHint="#fff" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/txtAdd"
         android:layout_width="122dp"
         android:layout_height="31dp"
-        android:layout_above="@+id/editText"
-        android:layout_alignStart="@+id/editText"
+        android:layout_above="@+id/editUser1"
+        android:layout_alignStart="@+id/editUser1"
         android:layout_marginBottom="-205dp"
         android:text="Add a Friend:"
         android:textColor="#000"
@@ -54,6 +54,25 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="43dp"
-        app:srcCompat="@drawable/serioug22" />
+        app:srcCompat="@drawable/serioug22"
+        />
+
+    <Button
+        android:id="@+id/btn_add"
+
+        android:layout_width="172dp"
+        android:layout_height="50dp"
+
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="247dp"
+        android:background="@drawable/buttonshape3"
+        android:shadowColor="#A8A8A8"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
+        android:text="Add"
+        android:textColor="#000"
+        android:textSize="25dp" />
 
 </RelativeLayout>
