--- a/NewApp/app/src/main/res/layout/activity_start_game.xml
+++ b/NewApp/app/src/main/res/layout/activity_start_game.xml
@@ -6,11 +6,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background111"
-    tools:context=".StartGame">
+    tools:context=".StartGame"
+    >
 
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textUser1"
         android:layout_width="224dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -41,7 +42,7 @@
         android:visibility="visible" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textUser2"
         android:layout_width="225dp"
         android:layout_height="59dp"
         android:layout_above="@+id/imageView5"
@@ -55,7 +56,7 @@
         android:id="@+id/imageView5"
         android:layout_width="140dp"
         android:layout_height="123dp"
-        android:layout_above="@+id/textView4"
+        android:layout_above="@+id/textUser1"
         android:layout_centerHorizontal="true"
         app:srcCompat="@drawable/vs" />
 
