--- a/NewApp/app/src/main/res/layout/activity_login.xml
+++ b/NewApp/app/src/main/res/layout/activity_login.xml
@@ -31,7 +31,7 @@
         android:background="#ece3e3"
         android:drawableLeft="@drawable/ic_action_user1"
         android:ems="10"
-        android:hint="Username"
+        android:hint="Email"
         android:inputType="textPersonName"
         android:textColorHint="#3b3939" />
 
@@ -67,15 +67,6 @@
         android:layout_marginBottom="74dp"
         android:text="Dont have an account? Sign Up!"
         android:textColor="#fff" />
-
-    <Button
-        android:id="@+id/button_menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="13dp"
-        android:text="Button" />
 
 
 </RelativeLayout>
