--- a/NewApp/app/src/main/res/layout/activity_friends.xml
+++ b/NewApp/app/src/main/res/layout/activity_friends.xml
@@ -58,21 +58,19 @@
         />
 
     <Button
-        android:id="@+id/btn_add"
+        android:id="@+id/btn_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:text="@string/back" />
 
-        android:layout_width="172dp"
-        android:layout_height="50dp"
-
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="247dp"
-        android:background="@drawable/buttonshape3"
-        android:shadowColor="#A8A8A8"
-        android:shadowDx="0"
-        android:shadowDy="0"
-        android:shadowRadius="5"
-        android:text="Add"
-        android:textColor="#000"
-        android:textSize="25dp" />
+    <Spinner
+        android:id="@+id/spinner2"
+        android:layout_width="68dp"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/txtInvites"
+        android:layout_below="@+id/txtInvites"
+        android:layout_marginTop="-199dp" />
 
 </RelativeLayout>
