--- a/NewApp/app/src/main/res/layout/activity_start_game.xml
+++ b/NewApp/app/src/main/res/layout/activity_start_game.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background111"
-    tools:context=".StartGame"
-    >
+    tools:context=".StartGame">
 
 
     <TextView
@@ -43,7 +42,7 @@
 
     <TextView
         android:id="@+id/textUser2"
-        android:layout_width="225dp"
+        android:layout_width="245dp"
         android:layout_height="59dp"
         android:layout_above="@+id/imageView5"
         android:layout_centerHorizontal="true"
@@ -66,7 +65,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-
 
         />
 
